made final changes to text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <h1>Places the Army has sent me</h1>
+        <h1>The (good and not so good) locations the Army has sent me</h1>
         <p id="subtitle">Locations and duration</p>
     </header>
 
